# radem-notebooks

./: .gitignore  .gitmodules  .venv.example  README.md  fetch_all.sh  install.sh  pyproject.toml  requirements.txt
analysis/: 1_onset_analysis.ipynb  2_noise_detection.ipynb
dashboards/: housekeeping_dashboard.json  irem_raw_science_dashboard.json  radem_housekeeping_dashboard.json  radem_raw_science_dashboard.json  radem_science_dashboard.json  science_raw_dashboard.json
irem/: 0_fetch_data.sh  1_processing_raw.ipynb  3_processing_line_protocol.ipynb
kernel/: 0_fetch_data.sh  1_spice_kernels.ipynb  1a_planetary_coverage.ipynb
notebooks/: 0_average_travel.ipynb  0_simple_radem_simulation.ipynb  1_faster_radem_simulation.ipynb  2_basic_data_processing.ipynb  3_dd_data_visualization.ipynb  4_houskeeping_exploration.ipynb  4_influxdb_grafana.ipynb  4_uploading_data_to_influxdb.ipynb  5_housekeeping_exploration.ipynb  README.md  pyproject.toml  srem.ipynb
plots/histograms/: electron_bin1.html  electron_bin2.html  electron_bin3.html  electron_bin4.html  electron_bin5.html  electron_bin6.html  electron_bin7.html  electron_bin8.html  proton_bin1.html  proton_bin2.html  proton_bin3.html  proton_bin4.html  proton_bin5.html  proton_bin6.html  (+2 more)
processing/: 0_fetching_ftp.sh  1_processing_raw.ipynb  2_processing_csv.ipynb  3_processing_line_protocol.ipynb  4_uploading_data_to_influxdb_TEMPERATURE.ipynb
scripts/: 1_processing_raw.py  2_processing_csv.py  3_processing_line_protocol.py  fetch_data.py  fix_and_validate_data.py
srem/: 0_fetch_data.sh  1_processing_raw.ipynb
(+2 files in other folders)
